--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,34 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <title>postcodefront</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Sintony|Snippet&display=swap"
+      rel="stylesheet"
+    />
+    <link href="/icomoon/style.css" rel="stylesheet" />
+    <link
+      href="https://www.multifaceted.info/static/css/pure-min.css"
+      rel="stylesheet"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/favicons/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/favicons/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/favicons/site.webmanifest" />
+    <link
+      rel="mask-icon"
+      href="/favicons/safari-pinned-tab.svg"
+      color="#5bbad5"
+    />
+    <title>Multifaceted Postcode Finder</title>
   </head>
   <body>
     <noscript>
