fixed date widget

--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,35 @@
       color="#5bbad5"
     />
     <title>Multifaceted Postcode Finder</title>
+    <meta property="og:locale" content="en_GB" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Multifaceted Postcode Finder"" />
+  <meta
+      name="description"
+      content="Postcode Finder with OpenStreetMap and extra information provided by extensive local databases and GeoNames.org."
+  />
+  <meta
+      property="og:description"
+      content="Postcode Finder with OpenStreetMap and extra information provided by extensive local databases and GeoNames.org"
+  />
+  <meta property="og:url" content="https://geo.multifaceted.info" />
+  <meta property="og:site_name" content="Multifaceted Postcode Finder" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Multifaceted Postcode Finder" />
+  <meta
+      property="og:image"
+      content="https://www.indypedia.org/images/castle-campbell.png"
+  />
+  <meta
+      name="twitter:description"
+      content="Postcode Finder with OpenStreetMap and extra information provided by extensive local databases and GeoNames.org"
+  />
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta
+      name="twitter:image"
+      content="https://www.indypedia.org/images/castle-campbell.png"
+  />
+  <link rel="canonical" href="https://geo.multifaceted.info" />
   </head>
   <body>
     <noscript>
@@ -42,5 +71,6 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="https://www.multifaceted.info/subdomain-info/loader.js" defer="defer"></script>
   </body>
 </html>
